force-app/main/default/objects/Case/fields/AccountAreaSalesLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountAreaSalesLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preenchido automaticamente caso só haja uma opção</description>
    <inlineHelpText>Preenchido automaticamente caso só haja uma opção</inlineHelpText>
    <label>Área de Negócios</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>AccountAreaSales__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>