force-app/main/default/objects/Case/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <formula>Account.CodeCustomerTxt__c</formula>
    <label>Código da conta</label>
    <type>Text</type>
</CustomField>