force-app/main/default/objects/Case/fields/AccountSeller__c.field-meta.xml
<CustomField>
    <fullName>AccountSeller__c</fullName>
    <formula>SellerLkp__c</formula>
    <label>Vendedor da conta</label>
    <type>Text</type>
</CustomField>