force-app/main/default/objects/Case/fields/AlternativeEmail1Eml__c.field-meta.xml
<CustomField>
    <fullName>AlternativeEmail1Eml__c</fullName>
    <label>Email alternativo 1</label>
    <type>Email</type>
</CustomField>