force-app/main/default/objects/Case/fields/AlternativeEmail2Eml__c.field-meta.xml
<CustomField>
    <fullName>AlternativeEmail2Eml__c</fullName>
    <label>Email alternativo 2</label>
    <type>Email</type>
</CustomField>