force-app/main/default/objects/Case/fields/BackofficeTxt__c.field-meta.xml
<CustomField>
    <fullName>BackofficeTxt__c</fullName>
    <label>Backoffice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Expedição</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Produtos</fullName>
            </value>
            <value>
                <fullName>Qualidade</fullName>
            </value>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>