force-app/main/default/objects/Case/fields/ByPassBln__c.field-meta.xml
<CustomField>
    <fullName>ByPassBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass</label>
    <type>Checkbox</type>
</CustomField>