force-app/main/default/objects/Case/fields/CarrierEmailEml__c.field-meta.xml
<CustomField>
    <fullName>CarrierEmailEml__c</fullName>
    <inlineHelpText>Email informado no cadastro da transportadora.</inlineHelpText>
    <label>Transportadora email</label>
    <type>Email</type>
</CustomField>