force-app/main/default/objects/Case/fields/CarrierLkp__c.field-meta.xml
<CustomField>
    <fullName>CarrierLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportadora</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>