force-app/main/default/objects/Case/fields/CarrierProofTxt__c.field-meta.xml
<CustomField>
    <fullName>CarrierProofTxt__c</fullName>
    <label>Comprovante da transportadora</label>
    <length>100</length>
    <type>Text</type>
</CustomField>