force-app/main/default/objects/Case/fields/CategoryTxt__c.field-meta.xml
<CustomField>
    <fullName>CategoryTxt__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Produto</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
            <value>
                <fullName>Vendedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>