force-app/main/default/objects/Case/fields/ClouseReasonTxt__c.field-meta.xml
<CustomField>
    <fullName>ClouseReasonTxt__c</fullName>
    <label>Motivo do encerramento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Crédito liberado</fullName>
            </value>
            <value>
                <fullName>Improcedente</fullName>
            </value>
            <value>
                <fullName>Negociação comercial</fullName>
            </value>
            <value>
                <fullName>Ordem cancelada</fullName>
            </value>
            <value>
                <fullName>Pedido alterado</fullName>
            </value>
            <value>
                <fullName>Pedido cancelado</fullName>
            </value>
            <value>
                <fullName>Prorrogação atendida</fullName>
            </value>
            <value>
                <fullName>Reclamação não procede</fullName>
            </value>
            <value>
                <fullName>Nota fiscal entregue</fullName>
            </value>
            <value>
                <fullName>Reposição reprovada</fullName>
            </value>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Termo de quitação recebido</fullName>
            </value>
            <value>
                <fullName>Informado por email</fullName>
            </value>
            <value>
                <fullName>Informado por telefone</fullName>
            </value>
            <value>
                <fullName>Sinistro total</fullName>
            </value>
            <value>
                <fullName>Sinistro parcial</fullName>
            </value>
            <value>
                <fullName>Ordem em duplicidade</fullName>
            </value>
            <value>
                <fullName>Solicitação do vendedor</fullName>
            </value>
            <value>
                <fullName>Substituição reprovada</fullName>
            </value>
            <value>
                <fullName>Substituição efetuada</fullName>
            </value>
            <value>
                <fullName>Revertido vendedor</fullName>
            </value>
            <value>
                <fullName>Revertido analista</fullName>
            </value>
            <value>
                <fullName>NFC de Devolução Incorreta</fullName>
            </value>
            <value>
                <fullName>Devolução não Aprovada</fullName>
            </value>
            <value>
                <fullName>Novo pedido entregue ao cliente</fullName>
            </value>
            <value>
                <fullName>Cliente não aceitou novo pedido</fullName>
            </value>
            <value>
                <fullName>Transportadora localizou mercadoria</fullName>
            </value>
            <value>
                <fullName>Indicação de BNDES realizada</fullName>
            </value>
            <value>
                <fullName>Indicação de BNDES não realizada</fullName>
            </value>
            <value>
                <fullName>Carta de correção enviada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>