force-app/main/default/objects/Case/fields/CNPJFml__c.field-meta.xml
<CustomField>
    <fullName>CNPJFml__c</fullName>
    <formula>Account.CNPJTxt__c</formula>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>