force-app/main/default/objects/Case/fields/Comentario_Interno__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Interno__c</fullName>
    <label>Comentário Interno</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>