force-app/main/default/objects/Case/fields/ContactDateDte__c.field-meta.xml
<CustomField>
    <fullName>ContactDateDte__c</fullName>
    <label>Data do contato do técnico</label>
    <type>Date</type>
</CustomField>