force-app/main/default/objects/Case/fields/ContactTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>ContactTypeTxt__c</fullName>
    <label>Tipo de contato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Mídia Social</fullName>
            </value>
            <value>
                <fullName>Reclame Aqui</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>