force-app/main/default/objects/Case/fields/CoordinatorSellerEmailEml__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorSellerEmailEml__c</fullName>
    <label>Coordenador email</label>
    <type>Email</type>
</CustomField>