force-app/main/default/objects/Case/fields/CreatedOrderTxt__c.field-meta.xml
<CustomField>
    <fullName>CreatedOrderTxt__c</fullName>
    <label>Ordem criada</label>
    <length>15</length>
    <type>Text</type>
</CustomField>