force-app/main/default/objects/Case/fields/CustomerOrderFml__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderFml__c</fullName>
    <formula>OrderLkp__r.OrderNumberTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido cliente</label>
    <type>Text</type>
</CustomField>