force-app/main/default/objects/Case/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <externalId>true</externalId>
    <label>Id customizado</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>