force-app/main/default/objects/Case/fields/DamageTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>DamageTypeTxt__c</fullName>
    <label>Origem da avaria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expedição</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Qualidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>