force-app/main/default/objects/Case/fields/Data_Ordem__c.field-meta.xml
<CustomField>
    <fullName>Data_Ordem__c</fullName>
    <description>Data na qual o cliente fez o pedido ao vendedor.</description>
    <label>Data Ordem</label>
    <type>Date</type>
</CustomField>