force-app/main/default/objects/Case/fields/DataCollectionAdditionalTxt__c.field-meta.xml
<CustomField>
    <fullName>DataCollectionAdditionalTxt__c</fullName>
    <label>Dados adicionais coleta</label>
    <type>TextArea</type>
</CustomField>