force-app/main/default/objects/Case/fields/DelayDaysFml__c.field-meta.xml
<CustomField>
    <fullName>DelayDaysFml__c</fullName>
    <formula>InvoiceLkp__r.DaysDueFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias em atraso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>