force-app/main/default/objects/Case/fields/DeliveryDateInvoiceCreatedDte__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateInvoiceCreatedDte__c</fullName>
    <label>Data de entrega NF criada</label>
    <type>Date</type>
</CustomField>