force-app/main/default/objects/Case/fields/DeliveryDateInvoiceReplacementDte__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDateInvoiceReplacementDte__c</fullName>
    <label>Data de entrega NF substituição</label>
    <type>Date</type>
</CustomField>