force-app/main/default/objects/Case/fields/DeliveryTxt__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTxt__c</fullName>
    <label>Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pós</fullName>
            </value>
            <value>
                <fullName>Ato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>