force-app/main/default/objects/Case/fields/DevolutionOrderStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>DevolutionOrderStatusTxt__c</fullName>
    <label>Status da ordem de devolução</label>
    <length>25</length>
    <type>Text</type>
</CustomField>