force-app/main/default/objects/Case/fields/DevolutionOrderTxt__c.field-meta.xml
<CustomField>
    <fullName>DevolutionOrderTxt__c</fullName>
    <label>Ordem de devolução</label>
    <length>20</length>
    <type>Text</type>
</CustomField>