force-app/main/default/objects/Case/fields/DevolutionWithoutShippingTxt__c.field-meta.xml
<CustomField>
    <fullName>DevolutionWithoutShippingTxt__c</fullName>
    <label>Devolução sem remessa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>