force-app/main/default/objects/Case/fields/EmailAccountAlternativeTxt__c.field-meta.xml
<CustomField>
    <fullName>EmailAccountAlternativeTxt__c</fullName>
    <label>Email alternativo da conta</label>
    <length>200</length>
    <type>Text</type>
</CustomField>