force-app/main/default/objects/Case/fields/EmailCoordinatorIndicationFml__c.field-meta.xml
<CustomField>
    <fullName>EmailCoordinatorIndicationFml__c</fullName>
    <formula>SellerIndicationLkp__r.CoordinatorEmailEml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email coordenador (indicação)</label>
    <type>Text</type>
</CustomField>