force-app/main/default/objects/Case/fields/EmailResponsibleLogisticEml__c.field-meta.xml
<CustomField>
    <fullName>EmailResponsibleLogisticEml__c</fullName>
    <label>Email do responsável (logística)</label>
    <type>Email</type>
</CustomField>