force-app/main/default/objects/Case/fields/EmailResponsibleTaxEml__c.field-meta.xml
<CustomField>
    <fullName>EmailResponsibleTaxEml__c</fullName>
    <label>Email do responsável (fiscal)</label>
    <type>Email</type>
</CustomField>