force-app/main/default/objects/Case/fields/EmailTecnicianResponsibleFml__c.field-meta.xml
<CustomField>
    <fullName>EmailTecnicianResponsibleFml__c</fullName>
    <formula>TecnicianLkp__r.EmailTxt__c</formula>
    <label>E-mail do responsável técnico</label>
    <type>Text</type>
</CustomField>