force-app/main/default/objects/Case/fields/EstimatedDateDte__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDateDte__c</fullName>
    <label>Data de previsão</label>
    <type>Date</type>
</CustomField>