force-app/main/default/objects/Case/fields/EstimatedDateFml__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDateFml__c</fullName>
    <formula>InvoiceLkp__r.ExpectedDeliveryDateDte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de previsão</label>
    <type>Date</type>
</CustomField>