force-app/main/default/objects/Case/fields/InvoiceCreatedTxt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreatedTxt__c</fullName>
    <label>Nota fiscal criada</label>
    <length>20</length>
    <type>Text</type>
</CustomField>