force-app/main/default/objects/Case/fields/InvoiceCustomerDevolutionTxt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCustomerDevolutionTxt__c</fullName>
    <label>Nota fiscal devolução cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>