force-app/main/default/objects/Case/fields/InvoiceLkp__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLkp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nota fiscal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Invoice__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>