force-app/main/default/objects/Case/fields/InvoiceReplacementTxt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReplacementTxt__c</fullName>
    <label>Nota fiscal de substituição</label>
    <length>20</length>
    <type>Text</type>
</CustomField>