force-app/main/default/objects/Case/fields/InvoiceSalesOfficeFml__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSalesOfficeFml__c</fullName>
    <formula>InvoiceLkp__r.RemittanceLkp__r.OrderLkp__r.SellerLkp__r.SalesOfficeTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escritório de vendas Nota fiscal</label>
    <type>Text</type>
</CustomField>