force-app/main/default/objects/Case/fields/InvoiceSellerNameFml__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSellerNameFml__c</fullName>
    <formula>InvoiceLkp__r.RemittanceLkp__r.OrderLkp__r.SellerLkp__r.SellerNumberNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do vendedor Nota fiscal</label>
    <type>Text</type>
</CustomField>