force-app/main/default/objects/Case/fields/InvoicesTxt__c.field-meta.xml
<CustomField>
    <fullName>InvoicesTxt__c</fullName>
    <label>Notas fiscais</label>
    <length>200</length>
    <type>Text</type>
</CustomField>