force-app/main/default/objects/Case/fields/IsRegisterNeogridTxt__c.field-meta.xml
<CustomField>
    <fullName>IsRegisterNeogridTxt__c</fullName>
    <label>Já possui cadastro neogrid?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>