force-app/main/default/objects/Case/fields/IssueDateFml__c.field-meta.xml
<CustomField>
    <fullName>IssueDateFml__c</fullName>
    <formula>InvoiceLkp__r.DocumentDateDte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de emissão</label>
    <type>Date</type>
</CustomField>