force-app/main/default/objects/Case/fields/LabEmailEml__c.field-meta.xml
<CustomField>
    <fullName>LabEmailEml__c</fullName>
    <label>Email do laboratório</label>
    <type>Email</type>
</CustomField>