force-app/main/default/objects/Case/fields/ManagerEmailEml__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmailEml__c</fullName>
    <label>Gerente email</label>
    <type>Email</type>
</CustomField>