force-app/main/default/objects/Case/fields/ManagerEmailIndicationFml__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmailIndicationFml__c</fullName>
    <formula>SellerIndicationLkp__r.ManagerEmailEml__c</formula>
    <label>Email gerente (indicação)</label>
    <type>Text</type>
</CustomField>