force-app/main/default/objects/Case/fields/ManagerNameIndicationFml__c.field-meta.xml
<CustomField>
    <fullName>ManagerNameIndicationFml__c</fullName>
    <formula>SellerIndicationLkp__r.ManagerNameTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome gerente (indicação)</label>
    <type>Text</type>
</CustomField>