force-app/main/default/objects/Case/fields/ModeSampleSendTxt__c.field-meta.xml
<CustomField>
    <fullName>ModeSampleSendTxt__c</fullName>
    <label>Modo de envio da amostra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Correio externo</fullName>
            </value>
            <value>
                <fullName>Correio interno</fullName>
            </value>
            <value>
                <fullName>Entregue em mãos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>