force-app/main/default/objects/Case/fields/MotiveTxt__c.field-meta.xml
<CustomField>
    <fullName>MotiveTxt__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expedição</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Negociação comercial</fullName>
            </value>
            <value>
                <fullName>CFOP / Natureza da Operação</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>Classificação fiscal</fullName>
            </value>
            <value>
                <fullName>CEP</fullName>
            </value>
            <value>
                <fullName>Descrição do produto</fullName>
            </value>
            <value>
                <fullName>Peso líquido</fullName>
            </value>
            <value>
                <fullName>Peso bruto</fullName>
            </value>
            <value>
                <fullName>Volume (s)</fullName>
            </value>
            <value>
                <fullName>Número de inscrição Suframa</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Redespacho (dados adicionais)</fullName>
            </value>
            <value>
                <fullName>Endereço de entrega (dados adicionais)</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Quantidade da ordem</fullName>
            </value>
            <value>
                <fullName>Recebedor de mercadoria</fullName>
            </value>
            <value>
                <fullName>Texto cabeçalho número fiscal</fullName>
            </value>
            <value>
                <fullName>Condição de pagamento</fullName>
            </value>
            <value>
                <fullName>Incoterms (CIF/FOB)</fullName>
            </value>
            <value>
                <fullName>Preço</fullName>
            </value>
            <value>
                <fullName>Programar pedido</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Número do pedido (cliente)</fullName>
            </value>
            <value>
                <fullName>Motivo de recusa de item</fullName>
            </value>
            <value>
                <fullName>Unidade de medida</fullName>
            </value>
            <value>
                <fullName>Observações representantes</fullName>
            </value>
            <value>
                <fullName>Solicitação do representante vendedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>