force-app/main/default/objects/Case/fields/NatureTxt__c.field-meta.xml
<CustomField>
    <fullName>NatureTxt__c</fullName>
    <label>Natureza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elogio</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Solicitação</fullName>
            </value>
            <value>
                <fullName>Sugestão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>