force-app/main/default/objects/Case/fields/NewOrderReplacementTxt__c.field-meta.xml
<CustomField>
    <fullName>NewOrderReplacementTxt__c</fullName>
    <label>Nova ordem de Substituição</label>
    <length>20</length>
    <type>Text</type>
</CustomField>