force-app/main/default/objects/Case/fields/NewSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>NewSalesOrder__c</fullName>
    <label>Nova ordem de venda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>