force-app/main/default/objects/Case/fields/NonConformityTxt__c.field-meta.xml
<CustomField>
    <fullName>NonConformityTxt__c</fullName>
    <label>Não conformidade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RegisterTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>---Expedição</fullName>
            </value>
            <value>
                <fullName>0401-Código de barras trocado</fullName>
            </value>
            <value>
                <fullName>0401-Produto faltante</fullName>
            </value>
            <value>
                <fullName>0402-Produto a mais</fullName>
            </value>
            <value>
                <fullName>0403-Produto trocado</fullName>
            </value>
            <value>
                <fullName>0403-Produto trocado, diferente da NF</fullName>
            </value>
            <value>
                <fullName>0404-Volume com etiqueta trocada</fullName>
            </value>
            <value>
                <fullName>0405-Atraso no embarque</fullName>
            </value>
            <value>
                <fullName>0405-Pedido faturado sem inspeção</fullName>
            </value>
            <value>
                <fullName>0406-Agendamento não cumprido</fullName>
            </value>
            <value>
                <fullName>0407-Código de barras trocado</fullName>
            </value>
            <value>
                <fullName>0408-Faturamento antecipado / Fechamento</fullName>
            </value>
            <value>
                <fullName>0408-Produto danificado no embarque</fullName>
            </value>
            <value>
                <fullName>0409-Demora no faturamento da remessa</fullName>
            </value>
            <value>
                <fullName>0409-SUSTAR DUPLICATA DA NF</fullName>
            </value>
            <value>
                <fullName>0411-Etiqueta trocada</fullName>
            </value>
            <value>
                <fullName>0412-Faturado sem estoque</fullName>
            </value>
            <value>
                <fullName>0414-Material Não Embarcou</fullName>
            </value>
            <value>
                <fullName>---Produto</fullName>
            </value>
            <value>
                <fullName>0601-Código de barras divergente</fullName>
            </value>
            <value>
                <fullName>0601-Embalagem com produto trocado</fullName>
            </value>
            <value>
                <fullName>0601-Prazo de validade vencido.</fullName>
            </value>
            <value>
                <fullName>0602-Falta dentro emb prim</fullName>
            </value>
            <value>
                <fullName>0602-Prazo de validade vencido</fullName>
            </value>
            <value>
                <fullName>0602-Problema com a embalagem.</fullName>
            </value>
            <value>
                <fullName>0603-Problema com a embalagem</fullName>
            </value>
            <value>
                <fullName>0603-Produto com problema de fabricação.</fullName>
            </value>
            <value>
                <fullName>0604-Código de barras divergente.</fullName>
            </value>
            <value>
                <fullName>0604-Produto com problema de fabricação</fullName>
            </value>
            <value>
                <fullName>0605-Código de barras divergente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>