force-app/main/default/objects/Case/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <inlineHelpText>De 0 à 10, qual nota daria para a qualidade e tempo de entrega do seu pedido?</inlineHelpText>
    <label>Nota qualidade e tempo de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Motivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>