force-app/main/default/objects/Case/fields/Nota_influ_ncia_da_marca__c.field-meta.xml
<CustomField>
    <fullName>Nota_influ_ncia_da_marca__c</fullName>
    <inlineHelpText>Quanto a influência da marca no momento da venda de tubos e conexões, qual nota daria?</inlineHelpText>
    <label>Nota influência da marca na venda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Motivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>