force-app/main/default/objects/Case/fields/NoteChangedProductBln__c.field-meta.xml
<CustomField>
    <fullName>NoteChangedProductBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anotado produto trocado</label>
    <type>Checkbox</type>
</CustomField>