force-app/main/default/objects/Case/fields/NoteDamageReceivingBln__c.field-meta.xml
<CustomField>
    <fullName>NoteDamageReceivingBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anotado avaria no recebimento</label>
    <type>Checkbox</type>
</CustomField>