force-app/main/default/objects/Case/fields/NoteFaultVolumeBln__c.field-meta.xml
<CustomField>
    <fullName>NoteFaultVolumeBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anotado falta de volume</label>
    <type>Checkbox</type>
</CustomField>