force-app/main/default/objects/Case/fields/NotSendemailBln__c.field-meta.xml
<CustomField>
    <fullName>NotSendemailBln__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Caso selecionado não será enviado email automático a partir do caso.</inlineHelpText>
    <label>Não enviar email automático</label>
    <type>Checkbox</type>
</CustomField>