force-app/main/default/objects/Case/fields/NumberApprehensioTermTxt__c.field-meta.xml
<CustomField>
    <fullName>NumberApprehensioTermTxt__c</fullName>
    <label>Número do termo apreensão</label>
    <length>30</length>
    <type>Text</type>
</CustomField>