force-app/main/default/objects/Case/fields/NumberShippingTxt__c.field-meta.xml
<CustomField>
    <fullName>NumberShippingTxt__c</fullName>
    <label>Número da remessa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>