force-app/main/default/objects/Case/fields/ObservationsFml__c.field-meta.xml
<CustomField>
    <fullName>ObservationsFml__c</fullName>
    <formula>Account.RemarkTxt__c</formula>
    <inlineHelpText>Observações oriundas da Conta.</inlineHelpText>
    <label>Observações</label>
    <type>Text</type>
</CustomField>