force-app/main/default/objects/Case/fields/Ordem_SAP__c.field-meta.xml
<CustomField>
    <fullName>Ordem_SAP__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;OrderLkp__r.Id, OrderLkp__r.CustomIDTxt__c,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordem SAP</label>
    <type>Text</type>
</CustomField>