force-app/main/default/objects/Case/fields/OrderDevolutionStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>OrderDevolutionStatusTxt__c</fullName>
    <label>Status ordem criada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>